# gflow-parser

./: .gitignore  README.md  pyproject.toml  test.py
app/: Dockerfile  requirements.txt
app/src/: broker.py  config.py  database.py  event_writer.py  helpers.py  main.py  models.py  serialization.py  tasks.py
app/src/index_config/: index_config.json
docker/e2e/api/: docker-compose.yml  example.env
docker/e2e/elk/: docker-compose.yml
docker/e2e/elk/logstash/pipeline/: dfir-dissect-pipeline.conf
docker/e2e/elk/opensearch_dashboards/: opensearch_dashboards.yml
docker/e2e/worker/: docker-compose.yml  example.env
docker/test/: docker-compose.yaml  example.env
